--- a/client/app/myOffers/myOffers.html
+++ b/client/app/myOffers/myOffers.html
@@ -1,5 +1,6 @@
 <div class ="container" >
-  <h4>My Offerings</h4>
+    <h4>My Offerings</h4>
+    <p>No offers published yet. Click on <b>Create offer</b> on the bottom to start a new offer.</p>
     <ul class="list-group">
         <li ng-repeat="offer in $ctrl.offers" class="ng-class: $ctrl.status(offer); list-group-item offerlist" ng-init="$ctrl.setMarker(offer)" >
             <a ng-href="/detailOffer/{{offer._id}}" ui-sref="detailOffer({id: offer._id})" class = 'offer-link'>
