--- a/client/index.html
+++ b/client/index.html
@@ -12,36 +12,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <!--IOS and Androi web clips-->
-    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico">
-    <link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
-    <link rel="icon" type="image/gif" href="/icons/favicon.gif">
-    <link rel="icon" type="image/png" href="/icons/favicon.png">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-57x57.png" sizes="57x57">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-60x60.png" sizes="60x60">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-72x72.png" sizes="72x72">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-76x76.png" sizes="76x76">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-114x114.png" sizes="114x114">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-120x120.png" sizes="120x120">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-128x128.png" sizes="128x128">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-144x144.png" sizes="144x144">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-152x152.png" sizes="152x152">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-180x180.png" sizes="180x180">
-    <link rel="apple-touch-icon" href="/icons/apple-touch-icon-precomposed.png">
-    <link rel="icon" type="image/png" href="/icons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/icons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/icons/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/icons/favicon-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/icons/favicon-196x196.png" sizes="196x196">
-    <meta name="msapplication-TileImage" content="/icons/win8-tile-144x144.png"> 
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+    <link rel="icon" type="image/gif" href="/assets/icons/favicon.gif">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon.png">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-57x57.png" sizes="57x57">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-60x60.png" sizes="60x60">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-72x72.png" sizes="72x72">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-76x76.png" sizes="76x76">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-114x114.png" sizes="114x114">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-128x128.png" sizes="128x128">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-144x144.png" sizes="144x144">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-152x152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-precomposed.png">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-160x160.png" sizes="160x160">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/assets/icons/favicon-196x196.png" sizes="196x196">
+    <meta name="msapplication-TileImage" content="/assets/icons/win8-tile-144x144.png"> 
     <meta name="msapplication-TileColor" content="#ffffff"> 
     <meta name="msapplication-navbutton-color" content="#ffffff"> 
-    <meta name="msapplication-square70x70logo" content="/icons/win8-tile-70x70.png"> 
-    <meta name="msapplication-square144x144logo" content="/icons/win8-tile-144x144.png"> 
-    <meta name="msapplication-square150x150logo" content="/icons/win8-tile-150x150.png"> 
-    <meta name="msapplication-wide310x150logo" content="/icons/win8-tile-310x150.png"> 
-    <meta name="msapplication-square310x310logo" content="/icons/win8-tile-310x310.png"> 
+    <meta name="msapplication-square70x70logo" content="/assets/icons/win8-tile-70x70.png"> 
+    <meta name="msapplication-square144x144logo" content="/assets/icons/win8-tile-144x144.png"> 
+    <meta name="msapplication-square150x150logo" content="/assets/icons/win8-tile-150x150.png"> 
+    <meta name="msapplication-wide310x150logo" content="/assets/icons/win8-tile-310x150.png"> 
+    <meta name="msapplication-square310x310logo" content="/assets/icons/win8-tile-310x310.png"> 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
